--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,6 @@
 html
  title= 'Textile Manager'
+ head
+  link(href='/css/bootstrap-responsive.min.css' rel='stylesheet' media='screen')
  body
   = 'Hello world\n'
